<resources>
    <string name="app_name">Friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="details_name_hint">Name</string>
    <string name="details_nickname_hint">Nickname</string>
    <string name="details_phone_hint">Phone number</string>
    <string name="details_email_hint">Email</string>
    <string name="details_faceboook_profile_url_hint">Faceboook profile URL</string>
    <string name="details_instagram_profile_url_hint">Instagram profile URL</string>
    <string name="details_linkedin_profile_url_hint">LinkedIn profile URL</string>
    <string name="details_birthdate_hint">Birthdate</string>
    <string name="details_comments_hint">Comments</string>
    <string name="about_name_and_version">ManBlockChain v1.0</string>
    <string name="about_licence">GNU GENERAL PUBLIC LICENSE, Version 3, 29 June 2007</string>
    <string name="about_shoe_size">Developer\'s shoe size is 43.</string>
    <string name="about_beer">Developer\'s favourite beer brand is Rothbeer.</string>
    <string name="drawer_name">ManBlockchain</string>
    <string name="drawer_email">send.me@your.money</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_about">About</string>
    <string name="action_menu_save">Save</string>
    <string name="title_add_new_friend">Add new friend</string>
    <string name="title_edit_friend">Edit friend</string>
</resources>
