<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_name"
                android:layout_height="wrap_content"
                android:hint="@string/details_name_hint"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_nickname"
                android:layout_height="wrap_content"
                android:hint="@string/details_nickname_hint"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_phone"
                android:layout_height="wrap_content"
                android:hint="@string/details_phone_hint"
                android:inputType="phone"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_email"
                android:layout_height="wrap_content"
                android:hint="@string/details_email_hint"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_facebook"
                android:layout_height="wrap_content"
                android:hint="@string/details_faceboook_profile_url_hint"
                android:inputType="textUri"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_instagram"
                android:layout_height="wrap_content"
                android:hint="@string/details_instagram_profile_url_hint"
                android:inputType="textUri"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_linkedin"
                android:layout_height="wrap_content"
                android:hint="@string/details_linkedin_profile_url_hint"
                android:inputType="textUri"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/edit_birthdate"
                android:layout_height="wrap_content"
                android:hint="@string/details_birthdate_hint"
                android:inputType="date"
                android:layout_width="fill_parent"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false">
            </EditText>
            <EditText
                android:id="@+id/edit_comments"
                android:layout_height="wrap_content"
                android:hint="@string/details_comments_hint"
                android:inputType="textMultiLine"
                android:lines="3"
                android:layout_width="fill_parent">
            </EditText>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>